--- a/config/env/development.json5
+++ b/config/env/development.json5
@@ -1,9 +1,9 @@
 {
     // This is your MYSQL Database configuration
     db: {
-        name: "etectApp",
-        password: "blooDStone0012",
-        username: "aero",
+        name: "",
+        password: "",
+        username: "",
         host: "localhost",
         port: 3306
     },
