--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,9 @@
     "angular-resource": "latest",
     "angular-cookies": "latest",
     "angular-mocks": "latest",
-    "angular-route": "latest",
     "bootstrap": "2.3.2",
     "angular-bootstrap": "0.7.0",
-    "angular-ui-utils": "0.0.4"
+    "angular-ui-utils": "0.0.4",
+    "angular-ui-router": "~0.2.15"
   }
 }
