--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "1.4.3",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.3.4",
+    "epilogue": "^0.6.5",
     "express": "4.12.3",
     "express-mysql-session": "^0.4.1",
     "express-session": "1.10.4",
@@ -49,6 +50,7 @@
     "passport-twitter": "1.0.2",
     "proxyquire": "^1.6.0",
     "sequelize": "^3.2.0",
+    "sequelize-auto": "^0.2.2",
     "serve-favicon": "2.2.0",
     "standard-error": "^1.1.0",
     "view-helpers": "latest",
