--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "bootstrap": ">=3",
     "angular-bootstrap": "0.7.0",
     "angular-ui-utils": "0.0.4",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-fusioncharts": "~0.0.2"
   }
 }
