--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport-google": "latest",
     "passport-local": "1.0.0",
     "passport-twitter": "1.0.2",
+    "protractor": "^2.1.0",
     "proxyquire": "^1.6.0",
     "sequelize": "^3.2.0",
     "sequelize-auto": "^0.2.2",
